# knack-sleuth

./: .env.example  .gitignore  LIBRARY_USAGE.md  README.md  SEARCH_USAGE.md  app_summary.json  avondale_summary.json  impact.json  pyproject.toml  test_no_cache.py
.claude/skills/knack-explorer/: SKILL.md
.github/workflows/: publish.yml  test.yml
docs/: AI_USE_CASE_MULTI_TENANT.md  APP_SUMMARY.md  APP_SUMMARY_IMPLEMENTATION.md  DATA_FRESHNESS_STRATEGY.md  EMBEDDING_STRATEGY.md  IMPACT_ANALYSIS.md  IMPACT_ANALYSIS_SUMMARY.md  MULTI_EMBEDDING_EXAMPLE.md  RAG_ARCHITECTURE.md
examples/: app_summary_example.py  cache_example.md  impact_analysis_example.py  library_usage_example.py  parse_example.py  search_example.py
src/: main.py
src/knack_sleuth/: __init__.py  cli.py  config.py  core.py  db_schema.py  models.py  page_builder.py  sleuth.py
src/knack_slueth/: __init__.py  models.py  slueth.py
tests/: README.md  conftest.py  test_core.py  test_db_schema.py
tests/data/: sample_knack_app_meta.json
