[project]
name = "knack-sleuth"
version = "0.1.5"
description = "Investigate your Knack.app's metadata to find where data objects and fields are used throughout your application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "typer>=0.20.0",
]

[project.scripts]
knack-sleuth = "knack_sleuth.cli:cli"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.4",
]


[tool.bumpversion]
current_version = "0.1.5"
commit = true
tag = true


[project.urls]
Homepage = "https://github.com/mcmasty/knack-sleuth"
Repository = "https://github.com/mcmasty/knack-sleuth"
Issues = "https://github.com/mcmasty/knack-sleuth/issues"